WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165385
[CSS Parser] Fix assert when unknown properties are encountered.
https://bugs.webkit.org/show_bug.cgi?id=165385
Summary
[CSS Parser] Fix assert when unknown properties are encountered.
Dave Hyatt
Reported
2016-12-05 10:16:15 PST
[CSS Parser] Fix assert when unknown properties are encountered.
Attachments
Patch
(1.20 KB, patch)
2016-12-05 10:16 PST
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-05 10:16:52 PST
Created
attachment 296156
[details]
Patch
Dave Hyatt
Comment 2
2016-12-05 10:19:57 PST
Fixed in
r209325
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug