[CSS Parser] Fix assert when unknown properties are encountered. https://bugs.webkit.org/show_bug.cgi?id=165385

Reviewed by Zalan Bujtas.

* css/CSSToStyleMap.cpp:
(WebCore::CSSToStyleMap::mapAnimationProperty):



Canonical link: https://commits.webkit.org/183000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209325 268f45cc-cd09-0410-ab3c-d52691b4dbfc